--- a/css/myStyle.css
+++ b/css/myStyle.css
@@ -8,17 +8,17 @@ html,body{
 	padding: 0;
 }
 .mainWrapper{
-	background-color: #fff;
+	background-color: white;
 	min-height: 100%;
 }
 .headerBar{
 	border:1px solid black;
 	height:70px;
-	background-color: #999;
+	background-color: #008FB2;
 }
 .bodyWrapper{
 	border:0px solid black;
-	background-color: #dedede;
+	background-color: white;
 	 overflow:auto;
 	min-height:600px;
 }
@@ -60,9 +60,11 @@ html,body{
 .galleryBody{
 	padding-bottom: 40px;
 	width: 100%;
+	float:right;
 	}
 
 .galleryIMG{
+
 	height:200px;
 	margin-bottom: 15px;
 	border:1px dashed black;
@@ -83,6 +85,12 @@ footer{
 	width: 40px;
 }
 
+.katie{
+	height: 40px;
+	width: 40px;
+}
+
+
 .nav-items {
 	float: right;
 }
@@ -101,6 +109,28 @@ footer{
 
 .containerteleport{
 	float: right;
-	width: 25vw;
-margin-top: 80px;
+	width: 30vw;
+margin-top: 30px;
+background-color: #33CCFF;
 }
+
+.containerconvobox{
+	float: middle;
+	width: 30vw;
+margin-top: 0px;
+background-color: #33CCFF;
+float:top;
+}
+
+
+.jumbotron{
+	background-color:white;
+}
+
+.listofconversations{
+	height:100px;
+	margin-bottom: 15px;
+	border:1px dashed black;
+	width:400px;
+}
+
